--- a/.github/workflows/deploy-oracle-k8s.yml
+++ b/.github/workflows/deploy-oracle-k8s.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Set up kubeconfig
         run: |
+          mkdir -p $HOME/.kube
           echo "${{ secrets.KUBECONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
           chmod 600 $HOME/.kube/config
 
@@ -28,12 +29,13 @@ jobs:
 
       - name: Set up SSH key
         run: |
-          echo "${{ secrets.ORACLE_SSH_KEY }}" > /tmp/id_rsa
-          chmod 600 /tmp/id_rsa
+          mkdir -p ~/.ssh
+          echo "${{ secrets.ORACLE_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Deploy Busybox Pod
         run: |
-          ssh -i /tmp/id_rsa \
+          ssh -i ~/.ssh/id_rsa \
           -o StrictHostKeyChecking=no \
           -o UserKnownHostsFile=/dev/null \
           -L 127.0.0.100:16443:127.0.0.1:6443 \
