--- a/.github/workflows/deploy-oracle-k8s.yml
+++ b/.github/workflows/deploy-oracle-k8s.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: '1.27.3'
+          version: 'default'
 
       - name: add entry to /etc/hosts
         run: |
